syntax = "proto3";

package onomyprotocol.market.market;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/onomyprotocol/market/x/market/types";

message Market {
  string internal_id = 1;
  string coin_a = 2;
  string coin_b = 3;
  double exchange_rate = 4;
  int64  cr_time = 5;
}

message Account {
  string              internal_id = 1;
  map<string, double> balance = 2;
  int64               cr_time = 3;
}

message Order {
  string      internal_id = 1;
  string      account_id = 2;
  string      bid_coin = 3;
  string      ask_coin = 4;
  double      amount = 5;
  double      exchange_rate = 6;
  OrderStatus status = 7;
  int64       cr_time = 8;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_TYPE_OPEN = 1;
  ORDER_TYPE_CLOSE = 2;
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_LIMIT = 1;
  ORDER_TYPE_STOP = 2;
};
